--- a/assets/header.html
+++ b/assets/header.html
@@ -46,7 +46,7 @@
                                 </li>
                             </li>
                             <li><a class="dropdown-item" href="#">Nuevos</a></li>
-                            <li><a class="dropdown-item" href="/autosUsados.html">Usados</a></li>
+                            <li><a class="dropdown-item" href="../autosUsados.html">Usados</a></li>
                             <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
                         </ul>
                     </li>
