--- a/assets/stripe-success.html
+++ b/assets/stripe-success.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/autosUsados.css">
     <title>Pago exitoso con Stripe</title>
 </head>
 <body>
-    <h1>Pago exitoso con Stripe</h1>
-    <p>Gracias por la orden de Tacos 🌮 😋</p>
+    <div class="succes">
+        <h2>Pago exitoso con Stripe</h2>
+        <p>Gracias por tu compra 😃</p>
+    </div>
 </body>
 </html>
