--- a/usados.html
+++ b/usados.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/productos.css">
     <title>Raio Macuin</title>
 
     <!--* ********** Etiquetas para el SEO ********** *-->
@@ -33,7 +34,7 @@
     <meta property="og:url" name="twitter:url" content="https://josueaguilera14.github.io/CompraVentaAuto">
 </head>
 
-<body>
+<body style="background-color: #35373a">
     <header class="encabezado">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -46,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
@@ -82,7 +83,7 @@
                                     </li>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Nuevos</a></li>
-                                <li><a class="dropdown-item" href="usados.html">Usados</a></li>
+                                <li><a class="dropdown-item" href="#">Usados</a></li>
                                 <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
                             </ul>
                         </li>
@@ -231,110 +232,154 @@
                 </div>
             </div>
         </div>
-        <section class="home">
-            <article class="hero-image">
-                <aside class="hero-image-opacity">
-                    <div class="hero-image-content">
-                        <h2 class="hero-image-title ">
-                            Raio Macuin<br>siempre contigo
-                        </h2>
-                    </div>
-                </aside>
-            </article>
-        </section>
     </header>
 
-    <section class="contenido ">
-        <!-- agregando al 'style' una variable CSS con la imagen del HeroImage-->
-        <article class="hero-image">
-            <aside class="hero-image-opacity">
-                <div class="container-fluid">
-                    <hr>
-                    <h2 class="section-title ">¡Variedad de modelos y ofertas!</h2>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
-                            <div class="card" style="width: 100%; margin-top: 10px;">
-                                <img src="img/imagen-info1.jpg" class="card-img-top" alt="...">
-                                <div class="card-body bg-dark" style="color: white;">
-                                    <h5 class="card-title">¿Conoces los beneficios de comprar tu auto con nosotros?</h5>
-                                    <hr>
-                                    <p class="card-text" style="text-align: justify;">Raio Macuin tiene los mejores precios de compra de todos los portales. Cotiza en 2 minutos y si tienes alguna duda, estamos a tu disposición. Recibe el mejor precio del mercado y sin moverte de tu casa ¡Tú no te mueves!
-                                        Raio Macuin lo hace por ti. Para tu comodidad podemos coordinar una inspección en tu domicilio, o recibirte en nuestras sucursales.</p>
-                                </div>
+    <section class="contenido">
+        <div class="container-fluid" style="padding: 0px;">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/slider1-usados.jpg" class="d-block w-100" alt="AOE2DE" style="max-height: 750px; min-height: 123px;">
+                        <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black;">
+                            <div class="container">
+                                <h3>¡Gran variedad de autos usados!</h3>
+                            </div>
+                            <hr>
+                            <div class="container">
+                                <p>Age of Empires II: Definitive Edition, uno de los juegos de estrategia más populares de la historia con increíbles gráficos 4K Ultra HD, una nueva banda sonora totalmente remasterizada y la expansión “Los últimos kanes”,
+                                    que cuenta con 3 nuevas campañas y 4 nuevas civilizaciones.</p>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" style="margin-top: 10px;">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-indicators" style="margin: 5px;">
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                                </div>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <div class="card" style="width: 100%;">
-                                            <img src="img/slider01.jpg" class="d-block w-100 card-img-top" alt="...">
-                                            <div class="card-body bg-dark" style="color: white;">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
-                                                    at deserunt eaque."</p>
-                                                <hr>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="card" style="width: 100%;">
-                                            <img src="img/slider02.jpg" class="d-block w-100 card-img-top" alt="...">
-                                            <div class="card-body bg-dark" style="color: white;">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
-                                                    at deserunt eaque."</p>
-                                                <hr>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="card" style="width: 100%;">
-                                            <img src="img/slider03.jpg" class="d-block w-100 card-img-top" alt="...">
-                                            <div class="card-body bg-dark" style="color: white;">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
-                                                    at deserunt eaque."</p>
-                                                <hr>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="card" style="width: 100%;">
-                                            <img src="img/slider04.jpg" class="d-block w-100 card-img-top" alt="...">
-                                            <div class="card-body bg-dark" style="color: white;">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text" style="text-align: justify;">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi expedita ea deserunt rerum reprehenderit repellat pariatur harum, nesciunt vitae recusandae, culpa corporis facere est! Non doloribus voluptates
-                                                    at deserunt eaque."</p>
-                                                <hr>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/slider2-usados.jpg" class="d-block w-100" alt="CBNST" style="max-height: 750px; min-height: 123px;">
+                        <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black">
+                            <div class="container">
+                                <h3>¡Protegemos tu compra!</h3>
+                            </div>
+                            <hr>
+                            <div class="container">
+                                <p>¡Vuelve Crash Bandicoot™, tu marsupial favorito! Mejorado, embelesado y listo para bailar con la colección de juegos La trilogía.</p>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
-                            <div class="card " style="width: 100%; margin-top: 10px; " ">
-                                <img src="img/imagen-info2.jpg " class="card-img-top " alt="... ">
-                                <div class="card-body bg-dark " style="color: white; ">
-                                    <h5 class="card-title ">¿Sabías que podemos vender tu auto por ti?</h5>
-                                    <hr>
-                                    <p class="card-text " style="text-align: justify; ">Los vehículos pueden tener diferentes accesorios adicionales o también pueden presentar deterioros físicos. Estos factores se toman en cuenta para la oferta final, junto a una prueba de conducción y verificación
-                                        interior/exterior del vehículo. Todo este proceso dura sólo 30 minutos. Esta evaluación y todos los trámites legales no tienen costo para ti. ¡Nosotros nos encargamos de todo!</p>
-                                </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/slider3-usados.jpg" class="d-block w-100" alt="RAGE" style="max-height: 750px; min-height: 123px;">
+                        <div class="container carousel-caption d-md-block texto-carrusel" style="background-color:black">
+                            <div class="container">
+                                <h3>¡Te ayudamos a vender tu auto!</h3>
                             </div>
+                            <hr>
+                            <div class="container ">
+                                <p>Si tienes un auto que deseas vender pero no saber por donde empezar, ¡te invitamos a contactarte con nosotros! Te apoyaremos en todo el proceso preventa y postventa para que vendas tu auto de la maneras mas segura y eficiente.
+                                    ¡Solo debes hacer click en el botón "Vende tu auto" y rellena el formulario!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="container productos">
+            <br>
+            <h1 style="text-align: center; color: white;">ULTIMOS AUTOS AÑADIDOS</h1>
+            <hr style="color: white;">
+            <div class="container row tarjetas">
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-            </aside>
-        </article>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5"></div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-2" style="padding-top: 10px;">
+                    <button type="button" class="btn btn-primary" style="width: 100%;">Ver más</button>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5"></div>
+            </div>
+            <hr>
+        </div>
     </section>
     <!-- FOOTER -->
     <footer class="footer bg-dark ">
