--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
     <div data-include="assets/header.html"></div>
 
     <!-- HeroImage -->
-    <section class="home">
-        <article class="hero-image">
-            <aside class="hero-image-opacity">
-                <div class="hero-image-content">
-                    <h2 class="hero-image-title ">
-                        Raio Macuin<br>siempre contigo
-                    </h2>
-                </div>
-            </aside>
-        </article>
-    </section>
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>
+                    Raio Macuin
+                    <span>Siempre Contigo</span>
+                </h2>
+            </div>
+        </div>
+
+        <video autoplay muted loop>
+            <source src="assets/video.mp4" type="video/mp4">
+        </video>
+    </div>
 
     <section class="contenido ">
         <!-- agregando al 'style' una variable CSS con la imagen del HeroImage-->
