--- a/autosNuevos.html
+++ b/autosNuevos.html
@@ -34,7 +34,7 @@
     <meta property="og:url" name="twitter:url" content="https://josueaguilera14.github.io/CompraVentaAuto">
 </head>
 
-<body style="background-color: #35373a">
+<body style="font-family: var(--bs-font-sans-serif);">
     <header class="encabezado">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -258,7 +258,7 @@
                             </div>
                             <hr>
                             <div class="container">
-                                <p>¡Vuelve Crash Bandicoot™, tu marsupial favorito! Mejorado, embelesado y listo para bailar con la colección de juegos La trilogía.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse aliquid dicta, similique, officia, suscipit rerum dolor dolore atque veniam neque explicabo ratione impedit ullam veritatis natus vero labore iste ad.</p>
                             </div>
                         </div>
                     </div>
@@ -288,92 +288,84 @@
         </div>
         <div class="container productos">
             <br>
-            <h1 style="text-align: center; color: white;">ULTIMOS AUTOS AÑADIDOS</h1>
-            <hr style="color: white;">
+            <h3 style="text-align: center;">AUTOS NUEVOS RECOMENDADOS</h3>
+            <hr>
             <div class="container row tarjetas">
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/img/nuevos1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2020 Chevrolet Captiva 1.5 LT</h5>
+                            <p class="card-text">$14.190.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 JAC T8 COMFORT</h5>
+                            <p class="card-text">$11.140.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/img/nuevos3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 Citroën C5 AIRCROSS Diesel 1.5 Automatico Full</h5>
+                            <p class="card-text">$21.290.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 Suzuki DZIRE gl sport</h5>
+                            <p class="card-text">$8.340.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 Ford TERRITORY TREND 1.5 AT</h5>
+                            <p class="card-text">$18.290.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 Peugeot 5008 1.5 BlueHDI 130 HP Auto8 Allure</h5>
+                            <p class="card-text">$25.990.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 JMC VIGUS Vigus 4x4 más IVA</h5>
+                            <p class="card-text">$13.790.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3 tarjeta">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/nuevos8.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">2021 Toyota Rush</h5>
+                            <p class="card-text">$14.990.000 CLP</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5"></div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-2" style="padding-top: 10px;">
-                    <button type="button" class="btn btn-primary" style="width: 100%;">Ver más</button>
+                    <button type="button" class="btn btn-primary" style="width: 100%; background-color:  #35373a; color: white;">Ver más</button>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5"></div>
             </div>
